--- a/index.html
+++ b/index.html
@@ -6,10 +6,151 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Mart</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
 
+
+    <header>
+        <!-- NAV BAR -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Shoes</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Bag Pack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <section>
+            <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>COOL HEADPHONE</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                    do amet sint. Velit officia consequat duis enim velit mollit.
+                                    Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                    do amet sint. Velit officia consequat duis enim velit mollit.
+                                    Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$1289</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>X-BOX HOME GAMING</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                    do amet sint. Velit officia consequat duis enim velit mollit.
+                                    Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$800</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+        </section>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <h2>Categories</h2>
+                <div class="row g-5">
+
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class=" p-3 border rounded-3 d-flex align-items-center bg-success justify-content-between">
+                            <h1>WATCH</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 border rounded-3 d-flex align-items-center bg-danger justify-content-between">
+                            <h1>BAG</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 border rounded-3 d-flex align-items-center bg-primary justify-content-between">
+                            <h1>SHOES</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
