--- a/index.html
+++ b/index.html
@@ -118,25 +118,29 @@
     </header>
     <main>
         <section>
-            <div class="container">
+
+            <!-- BY GUTTER -->
+
+
+            <div class="container my-5">
                 <h2>Categories</h2>
                 <div class="row g-5">
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class=" p-3 border rounded-3 d-flex align-items-center bg-success justify-content-between">
-                            <h1>WATCH</h1>
+                            <h1 class="text-white">WATCH</h1>
                             <img src="images/categories/watch.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border rounded-3 d-flex align-items-center bg-danger justify-content-between">
-                            <h1>BAG</h1>
+                            <h1 class="text-white">BAG</h1>
                             <img src="images/categories/bag.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border rounded-3 d-flex align-items-center bg-primary justify-content-between">
-                            <h1>SHOES</h1>
+                            <h1 class="text-white">SHOES</h1>
                             <img src="images/categories/shoes.png" alt="">
                         </div>
                     </div>
@@ -145,6 +149,137 @@
 
             </div>
         </section>
+        <br>
+        <br>
+
+        <section>
+
+            <!-- SHOE SECTION BY CARD -->
+
+
+            <div class="container my-5">
+                <h2>Shoes</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead
+                                </p>
+                                <h2>$400</h2>
+                            </div>
+
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok Pump</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
+                                <h2>$300</h2>
+                            </div>
+
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Reebok All Terrain</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead
+                                </p>
+                                <h2>$200</h2>
+                            </div>
+
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <br>
+        <br>
+
+        <section>
+
+            <!-- BAG SECTION BY CARD-->
+
+
+            <div class="container my-5">
+                <h2>Bag Pack</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Red Laltu Bag</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead
+                                </p>
+                                <h2>$500</h2>
+                            </div>
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Blue Niltu Bag</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead</p>
+                                <h2>$600</h2>
+                            </div>
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Black Kaltu Bag</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead
+                                </p>
+                                <h2>$700</h2>
+                            </div>
+                            <div class="card-footer">
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <br>
+        <br>
+
+        <section>
+            <div style="height: 250px;" class="container bg-success d-flex justify-content-center align-items-center">
+                <div>
+                    <h1 class="text-white">LET'S STAY IN TOUCH</h1>
+                    <p class="text-white">Get updates on sales, specials and more</p>
+                    <input type="email" name="" id="">
+                    <br>
+                    <button class="btn btn-danger">Submit</button>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
