--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!-- NAV BAR -->
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
